--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ main {
     gap: 1vw;
 }
 
+
 .robotron {
     background: url(../img/estrutura.png) no-repeat;
     background-position: center center;
@@ -43,6 +44,7 @@ main {
     position: absolute;
     left: -20%;
     top: -5%;
+    cursor: pointer;
 }
 
 .titulo {
